--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   AUTO_TAG_NAME: ${{ github.ref_name }}_${{ github.sha }}
-  PROJ_NAME: ghost_bat
+  PROJ_NAME: ghost_bot
 
 jobs:
   kicad_generation:
