Update PR branch name to main, add ability to be triggered manually

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -1,9 +1,10 @@
 name: Generate Files
 
 on:
+  workflow_dispatch:
   push:
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 env:
   AUTO_TAG_NAME: ${{ github.ref_name }}_${{ github.sha }}
