--- a/.github/workflows/experiments.yml
+++ b/.github/workflows/experiments.yml
@@ -17,17 +17,17 @@ jobs:
           output_path: ${{ github.workspace }}/images
         
       - name: Setup Pages
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/10-generate-fabrication-files-using-a-github-action'
         uses: actions/configure-pages@v3
 
       - name: Upload Artifact
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/10-generate-fabrication-files-using-a-github-action'
         uses: actions/upload-pages-artifact@v1
         with:
           path: "images"
 
   deploy-pages:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/10-generate-fabrication-files-using-a-github-action'
     runs-on: ubuntu-latest
     needs: render-image
       
