--- a/.github/workflows/experiments.yml
+++ b/.github/workflows/experiments.yml
@@ -1,4 +1,4 @@
-name: Hello Ghost Bot
+name: Create Images
 
 on:
   workflow_dispatch:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Upload Artifact
         if: github.ref == 'refs/heads/10-generate-fabrication-files-using-a-github-action'
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: "images"
 
@@ -42,4 +42,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v3
