--- a/.github/workflows/experiments.yml
+++ b/.github/workflows/experiments.yml
@@ -2,6 +2,8 @@ name: Create Images
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches: [ "main" ]
 jobs:
   render-image:
     name: render-image
