--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Make output generation script executable
       run: chmod +x ./scripts/generate_kicad_outputs.sh
     - name: Generate all kicad outputs
-      run: ./scripts/generate_kicad_outputs.sh
+      run: ./scripts/generate_kicad_outputs.sh --all
     - name: Create release
       id: create_release
       env:
