--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -12,7 +12,6 @@ env:
 jobs:
   kicad_generation:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@main
     - name: Install Linux Dependencies
@@ -30,5 +29,5 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       run: |
             gh release create "${{ env.AUTO_TAG_NAME }}"
-            gh release upload "${{ env.AUTO_TAG_NAME }}" ./output/*
+            gh release upload "${{ env.AUTO_TAG_NAME }}" ./output/**
 
